feat(test, exception): 테스트, 예외처리 추가